--- a/.github/workflows/microk8s-kube-bench.yml
+++ b/.github/workflows/microk8s-kube-bench.yml
@@ -31,6 +31,6 @@ jobs:
     - name: install MicroK8s + kube-bench
       run: |-
         cd ke-edge
-        docker build --file Dockerfile --tag didierdurand/temperature-mapper
+        docker build --file Dockerfile --tag didierdurand/temperature-mapper .
                          
    
