--- a/.github/workflows/microk8s-kubeedge-docker.yml
+++ b/.github/workflows/microk8s-kubeedge-docker.yml
@@ -31,6 +31,8 @@ jobs:
     - name: install MicroK8s + kube-bench
       run: |-
         cd ke-edge
+        echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERID }} --password-stdin
         docker build --file Dockerfile --tag didierdurand/temperature-mapper .
+        docker push didierdurand/temperature-mapper
                          
    
