update yaml manifests

--- a/ke-cloud/temperature-device-model.yaml
+++ b/ke-cloud/temperature-device-model.yaml
@@ -10,4 +10,4 @@ spec:
       type:
         string:
           accessMode: ReadOnly
-          defaultValue: ''
+          defaultValue: 'default temperature'
