--- a/.github/workflows/microk8s-ke-docker-build.yml
+++ b/.github/workflows/microk8s-ke-docker-build.yml
@@ -33,6 +33,6 @@ jobs:
         cd ke-edge
         echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERID }} --password-stdin
         docker build --file Dockerfile --tag didierdurand/kube-edge-temperature-mapper .
-        docker push didierdurand/kube-edge-temperature-mapper
+        #docker push didierdurand/kube-edge-temperature-mapper
                          
    
